[package]
name = "audio-processor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
freeverb = { git = "https://github.com/irh/freeverb-rs", version = "0.1.0" }
dotenv = "0.15.0"
ndarray = "0.15.6"
sndfile = "0.1.1"

[dependencies.tokio]
version = "1.23.0"
features = ["full"]