[package]
name = "audioprocessor"
version = "0.1.0"
edition = "2021"
authors = ["Pol Vallverdu"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
freeverb = { git = "https://github.com/irh/freeverb-rs", version = "0.1.0" }
sndfile = "0.1.1"
itertools = "0.10.5"
num-traits = "0.2"

[lib]
crate-type = ["cdylib"]
